--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -71,6 +71,8 @@
   <meta property="og:image" content="{{ page_large_image }}">
 {% elsif page_teaser_image %}
   <meta property="og:image" content="{{ page_teaser_image }}">
+{% elsif page.og_image %}
+  <meta property="og:image" content="{% if page.og_image contains "://" %}{{ page.og_image }}{% else %}{{ page.og_image | absolute_url }}{% endif %}">
 {% endif %}
 
 {% if site.twitter.username %}
