--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -67,12 +67,10 @@
   <meta property="og:description" content="{{ seo_description }}">
 {% endif %}
 
-{% if page_large_image %}
-  <meta property="og:image" content="{{ page_large_image }}">
-{% elsif page_teaser_image %}
-  <meta property="og:image" content="{{ page_teaser_image }}">
-{% elsif page.og_image %}
-  <meta property="og:image" content="{% if page.og_image contains "://" %}{{ page.og_image }}{% else %}{{ page.og_image | absolute_url }}{% endif %}">
+{% if page.og_image %}
+  <meta property="og:image" content="{{ page.og_image }}">
+{% else %}
+  <meta property="og:image" content="{{ site.og_image }}">
 {% endif %}
 
 {% if site.twitter.username %}
@@ -81,14 +79,11 @@
   <meta name="twitter:description" content="{{ seo_description }}">
   <meta name="twitter:url" content="{{ canonical_url }}">
 
-  {% if page_large_image %}
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="{{ page_large_image }}">
+  <meta name="twitter:card" content="summary">
+  {% if page.og_image %}
+    <meta name="twitter:image" content="{{ page.og_image }}">
   {% else %}
-    <meta name="twitter:card" content="summary">
-    {% if page_teaser_image %}
-      <meta name="twitter:image" content="{{ page_teaser_image }}">
-    {% endif %}
+    <meta name="twitter:image" content="{{ site.og_image }}">
   {% endif %}
 
   {% if author_twitter %}
