--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -79,7 +79,7 @@
   <meta name="twitter:description" content="{{ seo_description }}">
   <meta name="twitter:url" content="{{ canonical_url }}">
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   {% if page.og_image %}
     <meta name="twitter:image" content="{{ page.og_image }}">
   {% else %}
