Add Siesta and libraries article, HN account, fix margin for mobile

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -267,6 +267,10 @@ body:hover .visually-hidden button {
     color: $linkedin-color;
   }
 
+  .fa-hacker-news {
+    color: #ff6600;
+  }
+
   .fa-mastodon,
   .fa-mastodon-square {
     color: $mastodon-color;
