Add trailing slash to the href

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,6 @@ layout: archive
 </div>
 
 <br/>
-<a href="/archive">Read more</a>
+<a href="/archive/">Read more</a>
 
 {% include paginator.html %}
